--- a/pages/main/basic.css
+++ b/pages/main/basic.css
@@ -106,8 +106,11 @@ div#stag {
 
 /*          _MAIN   TAG_             */
 div#mtag {
+    position: relative;
     color: #000;
-    font-size: 15px;
+    font-size: 12px;
+    float: left;
+    /* padding-left: -18px; */
     
     /* position: absolute; */
     /* background: #eceff4; */
@@ -194,7 +197,7 @@ div#pic {
 /* ---         SKILL attrb       --- */
 
     .skill {
-        position: relative;
+        /* position: relative; */
         /* position: absolute; */
         background: #5c6b76;
         height: auto;
@@ -207,10 +210,7 @@ div#pic {
         font-size: 15px;
         
     }
-    div#skillbox li {
-        list-style: none;
-        padding-left: -20px;
-    }
+
     /* container for slider bar */
     div#skillbox {
         position: relative;
@@ -218,7 +218,10 @@ div#pic {
         padding-top: 20px;
         /* padding-left: -10px; */
     }
-
+    div#skillbox li {
+        list-style: none;
+        padding-left: -20px;
+    }
     
 
 /*      ---   OTHER DIVS    ---     */
@@ -258,8 +261,9 @@ div#pic {
         /* border: 1px solid rgb(150, 76, 7); */
     }
     
+/*          MAIN  DIVS           */
 /* - = = = - - = = = - - = = = - - = = = - - = = = - - = = = - - = = = - - = = = - */
-/*  MAIN  DIVS */
+/* ---        NAME          ---  */
 
 div#name {
     position: relative;
@@ -271,24 +275,7 @@ div#name {
     font-size: 36px;
     /* border: 1px solid rgb(150, 76, 7); */
 }
-
-
-div#about {
-    position: relative;
-    /* position: absolute; */
-
-    background: #c6ccd4;
-    margin-left: 5%; 
-    font-size: 12px;
-    
-    height: auto;
-    /* border: 1px solid rgb(229, 229, 68); */
-}
-div#about p {
-    font-size: 14px;    
-
-}
-
+/* ---        JOB TITLE          ---  */
 .job {
     position: relative;
     background: #c6ccd4;
@@ -297,6 +284,28 @@ div#about p {
     height: 50px;
     /* border: 1px solid rgb(150, 76, 7); */
 }
+/* - = = = - - = = = - - = = = - - = = = - */
+    /* ---        ABOUT          ---  */
+
+div#about {
+    position: relative;
+    /* position: absolute; */
+    background: #c6ccd4;
+    margin-left: 8px; 
+    font-size: 12px;
+    height: auto;
+    /* border: 1px solid rgb(229, 229, 68); */
+}
+div#aboutbox {
+    padding-left: 16px;
+    font-size: 16px;
+
+}
+div#about p {
+    font-size: 16px;    
+
+}
+
 
 .obj {
     position: relative;
