--- a/pages/main/basic.css
+++ b/pages/main/basic.css
@@ -8,7 +8,7 @@ html, body {
     float:none; 
     margin: 0 auto;
     width: 100%; 
-    height: 100%;
+    /* height: 100%; */
     /* overflow-x: hidden;
     overflow-y: hidden; */
     
@@ -27,11 +27,6 @@ body {
     max-width: 1024px;
     
 }
-    /* ul {
-        float: none;     
-        margin: none;
-    } */
-
 
 
 /* - = = = - - = = = - - = = = - - = = = - */
@@ -44,8 +39,6 @@ div#side {
     width: 34%;
 
     max-width: 344px;
-    /* max-height: 1024px; */
-    /* padding-left: 15px; */
     /* border: 2px solid rgb(32, 54, 200); */
 }
 
@@ -55,9 +48,7 @@ div#main {
     width: 66%;
     float: right;
 
-    max-width: 768px;
-    /* max-height: 1024px; */
-    /* max-height: 1024px; */
+    /* max-width: 768px; */
     /* border: 2px solid rgb(93, 214, 56); */
 }
 
@@ -84,8 +75,9 @@ div#mtag {
     font-size: 1.2vw;
     float: left;
     padding-left: 8px;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    /* padding-top: 2%;
+    padding-bottom: 2%; */
+    line-height: 2px;
 
         /* padding-left: -18px; */
         /* position: absolute; */
@@ -97,16 +89,17 @@ div#mtag {
 /*  SIDE DIVS */
 
 div#pic {
-    margin: 0;
     float:center; 
     display: block;
+    margin: 0;
     margin-left: auto;
     margin-right: auto;
     width: 60%; 
     max-width: 200px;
+    padding-top: 1vh;
     
-    height:auto;
-    border: 2px solid rgb(120, 236, 157);
+    /* height:auto; */
+    /* border: 2px solid rgb(120, 236, 157); */
 }
     img {
         border-radius: 50%;
@@ -119,27 +112,26 @@ div#pic {
 div#contact {
     position: relative;
     background: #5c6b76;
-    padding-left: 1px;
-    padding-top: 1px;
-    
-    height: 15vb;
-    border: 2px solid rgb(229, 229, 68);
+    height: 150px;
+    /* border: 2px solid rgb(229, 229, 68); */
 }
 
 div#contact li {
     list-style: none;
-    font-size: 2.5vw;
+    font-size: 1.5vw;
     /* padding-left: -10px; */
 }
 
 div#contactbox {
     float: left;
-    padding-left: 1%;
+    /* padding-left: 1%; */
+    padding-left: 1vw;
+    padding-top: 2%;
     
-    /* position: relative; */
-    /* color: #fff; */
-    /* font-size: 1vw; */
-    /* padding-top: 1%; */
+    /* height: 15vw; */
+    /* border: 2px solid rgb(229, 170, 68); */
+    
+
 }
     .no-wrap-text {
         /* Appliquer l'attribut white-space avec la valeur nowrap */
@@ -148,13 +140,12 @@ div#contactbox {
     .comp {
         /* position: relative; */
         float: left;
-        font-size: 2vw;
         padding-bottom: 4px;
-
-        /* margin-left: auto; */
-        /* margin-right: auto; */
-        /* line-height: 2; */
+        
+        margin-left: auto;
+        margin-right: auto;
     }
+
     /* - =          HOVER            = - */
     .element:hover {
         /** Change la couleur de fond et la couleur du texte lors du survol */
@@ -177,8 +168,9 @@ div#skill {
     background: #5c6b76;
     height: 45%;
     /* height: 40vb; */
-    border: 3px solid rgb(62, 62, 183);
     padding-left: 1vw;
+    padding-bottom: 1vh;;
+    /* border: 3px solid rgb(62, 62, 183); */
 }
 
 div#skill p {
@@ -207,7 +199,8 @@ div#skillbox li {
     color: #fff;
     list-style: none;
     padding-left: 1%;
-    font-size: 1.3vw;
+    font-size: 1.1vw;
+    line-height: 2vw;
     padding-top: .2vh;
 }
 
@@ -226,17 +219,17 @@ div#skillbox li {
       text-align: right;
       padding-top: 1px;
       padding-bottom: 1px;
-      color: rgb(23, 41, 41);
-      font-size: 10px;
+      color: #c6ccd4;
+      font-size: .8vw;
     }
 
     /*     slider bar ref. name %%%  */
-    .full {width: 95%; background-color: #ddd;}
-    .solid {width: 85%; background-color: #ddd;}
-    .good {width: 70%; background-color: #ddd;}
-    .fine {width: 60%; background-color: #ddd;}
-    .wip {width: 45%; background-color: #ddd;}
-    .init {width: 35%; background-color: #ddd;}
+    .full {width: 95%; background-color: #c6ccd4;}
+    .solid {width: 85%; background-color: #c6ccd4;}
+    .good {width: 70%; background-color: #c6ccd4;}
+    .fine {width: 60%; background-color: #c6ccd4;}
+    .wip {width: 45%; background-color: #c6ccd4;}
+    .init {width: 35%; background-color: #c6ccd4;}
 
 /* - = = = - - = = = - - = = = - - = = = - */
     /* ---        INTERETS          ---  */
@@ -245,7 +238,7 @@ div#skillbox li {
     background: #5c6b76;
     height: 20%;
 
-    border: 1px solid rgb(150, 76, 7);
+    /* border: 1px solid rgb(150, 76, 7); */
 }
 div#intbox {
     padding-left: -10px;
@@ -257,6 +250,12 @@ div#intbox li {
     list-style: none;
     font-size: 1.2vw;
     /* padding-left: -10px; */
+    color: #fff;
+    list-style: none;
+    padding-left: 1%;
+    font-size: 1.2vw;
+    line-height: 1.4vw;
+    padding-top: .2vh;
 }
     
 /*          MAIN  DIVS           */
@@ -286,7 +285,7 @@ div#job {
 }
 
 .jobbox  p {
-    font: 50% Cambria, Calibri,sans-serif;
+    font: 70% Cambria, Calibri,sans-serif;
     font-size: 3vw;
     margin-left: 35%; 
     }
@@ -297,19 +296,19 @@ div#about {
     position: relative;
     background: #c6ccd4;
     margin-left: 8px; 
-    font-size: 12px;
+    font-size: 1.8vw;
     height: auto;
     /* border: 1px solid rgb(229, 229, 68); */
 }
 div#aboutbox {
     position: relative;
     padding-left: 16px;
-    font-size: 12px;
+    font-size: 1.6vw;
     padding-top: 1%;
 }
 div#aboutbox p {
     /* font-size: 16px;     */
-    font-size: 2vw;
+    font-size: 1.5vw;
 
 }
 
@@ -339,6 +338,7 @@ div#aboutbox p {
 .exp li {
     list-style: none;
     font-size: 1.2vw;
+}
 
 
 
