--- a/pages/main/basic.css
+++ b/pages/main/basic.css
@@ -318,24 +318,31 @@ div#aboutbox p {
     height: 225px;
     /* border: 1px solid rgb(150, 76, 7); */
 }
-.edu {
+
+/* .edu */
+div#edu {
+    padding-top: 4px;
     position: relative;
     background: #c6ccd4;
-    height: auto;
-    border: 1px solid rgb(150, 76, 7);
+    height: 5vw;
+    /* border: 1px solid rgb(150, 76, 7); */
 }
 
-.edu li {
+div#edu pli{
+    padding-top: 1vh;
     list-style: none;
     font-size: 1.2vw;
 }
-.exp {
+
+div#exp {
+    padding-top: 4px;
     position: relative;
     background: #c6ccd4;
-    height: 150px;
-    border: 1px solid rgb(150, 76, 7);
+    height: 15vw;
+    /* border: 1px solid rgb(150, 76, 7); */
 }
-.exp li {
+div#exp li{
+    padding-top: 1vh;
     list-style: none;
     font-size: 1.2vw;
 }
