--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -9,30 +9,32 @@ html, body {
     padding: 0;
     float:none; 
     margin: 0 auto;
-    width: 100%; 
+    /* width: 100%;  */
+    color: #001d3d;
+    font: 90% Roboto, Arial, sans-serif;
+    font-weight: 100;
+    /* min-width: 378px;
+    max-width: 1024px; */
+    
     /* height: 100%; */
     /* overflow-x: hidden;
     overflow-y: hidden; */
-    
-        max-height: 100vh;
-        color: #001d3d;
-    font: 90% Roboto, Arial, sans-serif;
-    font-weight: 100;
-    min-height: 255px;
-    min-width: 378px;
-    max-width: 1024px;
+        /* max-height: 100vh; */
+    /* min-height: 255px; */
         /* position: center; */
         /* display: flex;  */
 }
 
 
 body {
-    /* color: #001d3d;
+    color: #001d3d;
     font: 90% Roboto, Arial, sans-serif;
-    font-weight: 100;
+    /* font-weight: 100; */
     min-height: 255px;
     min-width: 378px;
-    max-width: 1024px; */
+    /* max-width: 100vw; */
+    width: 100vh; 
+    width: 100%; 
 
     
 }
@@ -50,7 +52,7 @@ div#side {
     float: left;
     width: 34%;
 
-    max-width: 344px;
+    max-width: 40vw;
     height: 100%;
     /* border: 2px solid rgb(32, 54, 200); */
 }
@@ -61,6 +63,8 @@ div#main {
     width: 66%;
     float: right;
     min-height: 100%;
+    max-height: 100vh;
+
     overflow-y: auto;
     /* max-width: 768px; */
     /* border: 2px solid rgb(93, 214, 56); */
@@ -108,7 +112,7 @@ div#pic {
     margin: 0;
     margin-left: auto;
     margin-right: auto;
-    width: 60%; 
+    width: 50%; 
     max-width: 200px;
     padding-top: 1vh;
     
@@ -301,7 +305,7 @@ div#job {
 .jobbox  p {
     font: 70% Cambria, Calibri,sans-serif;
     font-size: 3vw;
-    margin-left: 35%; 
+    margin-left: 20vw; 
     }
 /* - = = = - - = = = - - = = = - - = = = - */
     /* ---          ABOUT               ---  */
@@ -309,14 +313,14 @@ div#job {
 div#about {
     position: relative;
     background: #c6ccd4;
-    margin-left: 2vb; 
+    margin-left: 2vw; 
     font-size: 1.8vb;
     height: auto;
     /* border: 1px solid rgb(229, 229, 68); */
 }
 div#aboutbox {
     position: relative;
-    padding-left: 16px;
+    padding-left: 1.6vw;
     font-size: 1.6vw;
     padding-top: 1%;
 }
@@ -336,19 +340,20 @@ div#aboutbox p {
 
 /* .edu */
 .edu {
-    padding-top: 1vb;
+    padding-top: 2vh;
     position: relative;
     background: #c6ccd4;
-    padding-left: 16px;
     height: auto;
+    padding-left: 2vw;
+    font-size: 1.2vw;
     /* border: 1px solid rgb(150, 76, 7); */
 }
 
 .edu p{
-    padding-left: 2vw;
+    padding-left: 3vw;
     /* padding-top: 1vb; */
     list-style: none;
-    font-size: 1.2vw;
+    /* font-size: 1.2vb; */
 }
 
 /* .edu li{
@@ -357,34 +362,37 @@ div#aboutbox p {
     list-style: none;
     font-size: 1.5vb;
 } */
+
 .exp {
-    padding-top: 1vb;
+    padding-top: 2vb;
     position: relative;
     background: #c6ccd4;
     height: auto;
+    padding-left: 2vw;
+    font-size: 1.2vw;
     /* border: 1px solid rgb(150, 76, 7); */
 }
 .exp p{
-    padding-left: 2vb;
-    padding-top: 1vb;
+    padding-left: 3vw;
+    /* padding-top: 1vb; */
     list-style: none;
-    font-size: 1.2vb;
 }
 
-
+/* - = = = - - = = = - - = = = - - = = = - - = = = - - = = = - - = = = - - = = = - */
 /* Styling for the tooltip container */
 .tooltip-container {
     position: relative;
-    display: inline-block;
+    cursor: pointer;
+    /* display: inline-block; */
     /* Add some styles to make the tooltip visible on hover */
     /* For example, you can use an underline and change the text color */
-    text-decoration: underline;
+    text-decoration: none;
     color: blue;
   }
   
   /* Tooltip message style */
   .tooltip-container::after {
-    content: "This is the tooltip message!";
+    content: attr(data-text);    /* "This is the tooltip message!"; */
     position: absolute;
     bottom: 100%; /* Position it above the parent element */
     left: 50%;
@@ -393,7 +401,7 @@ div#aboutbox p {
     color: white; /* Text color of the tooltip */
     padding: 5px 10px; /* Add some padding for better appearance */
     border-radius: 4px; /* Rounded corners for the tooltip */
-    font-size: 14px; /* Font size of the tooltip */
+    font-size: 1.1vb; /* Font size of the tooltip */
     white-space: nowrap; /* Prevent line breaks within the tooltip */
     visibility: hidden; /* Hide the tooltip by default */
     opacity: 0; /* Make it completely transparent */
