--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -13,13 +13,15 @@ html, body {
     color: #001d3d;
     font: 90% Roboto, Arial, sans-serif;
     font-weight: 100;
+    max-height: 100vh;
+    
     /* min-width: 378px;
     max-width: 1024px; */
     
     /* height: 100%; */
     /* overflow-x: hidden;
     overflow-y: hidden; */
-        /* max-height: 100vh; */
+        
     /* min-height: 255px; */
         /* position: center; */
         /* display: flex;  */
@@ -33,8 +35,8 @@ body {
     min-height: 255px;
     min-width: 378px;
     /* max-width: 100vw; */
-    width: 100vh; 
     width: 100%; 
+    width: 100vh; 
 
     
 }
@@ -63,10 +65,11 @@ div#main {
     width: 66%;
     float: right;
     min-height: 100%;
-    max-height: 100vh;
+    /* max-height: 100vh; */
 
     overflow-y: auto;
-    /* max-width: 768px; */
+    
+    max-width: 768px;
     /* border: 2px solid rgb(93, 214, 56); */
 }
 
@@ -254,26 +257,26 @@ div#skillbox li {
 .int {
     position: relative;
     background: #5c6b76;
-    height: 20%;
+    font: 90% Roboto, Arial, sans-serif;
+    height: 10vh;
 
     /* border: 1px solid rgb(150, 76, 7); */
 }
 div#intbox {
-    padding-left: -10px;
+    /* padding-left: 2vw; */
     position: relative;
-    padding-top: 1%;
+    padding-top: 1vh;
     /* border: 3px solid rgb(29, 9, 9); */
 }
 div#intbox li {
+    
     list-style: none;
     font-size: 1.2vw;
-    /* padding-left: -10px; */
     color: #fff;
-    list-style: none;
-    padding-left: 1%;
-    font-size: 1.2vw;
-    line-height: 1.4vw;
-    padding-top: .2vh;
+    line-height: 1vh;
+    padding-top: .3vh;
+    padding-left: 1.6vw;
+    /* padding-left: -10px; */
 }
     
 /*          MAIN  DIVS           */
@@ -314,7 +317,7 @@ div#about {
     position: relative;
     background: #c6ccd4;
     margin-left: 2vw; 
-    font-size: 1.8vb;
+    font-size: 1.8vw;
     height: auto;
     /* border: 1px solid rgb(229, 229, 68); */
 }
