--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -12,17 +12,6 @@ html, body {
     font: 90% Roboto, Arial, sans-serif;
     font-weight: 100;
     max-height: 100vh;
-
-        /* min-width: 378px;
-        max-width: 1024px; */
-        
-        /* height: 100%; */
-        /* overflow-x: hidden;
-        overflow-y: hidden; */
-            
-        /* min-height: 255px; */
-            /* position: center; */
-            /* display: flex;  */
 }
 
 body {
@@ -30,12 +19,8 @@ body {
     font: 90% Roboto, Arial, sans-serif;
     min-height: 255px;
     min-width: 378px;
-    width: 100%; 
     width: 100vh; 
-    
-    /* font-weight: 100; */
-    /* max-width: 100vw; */
-
+    width: 100%; 
 }
   
 .container {
@@ -50,7 +35,7 @@ div#side {
     background: #4d5d68;
     float: left;
     width: 34%;
-
+    /* min-width: 40vw; */
     max-width: 40vw;
     height: 100%;
 
@@ -63,7 +48,7 @@ div#main {
     width: 66%;
     float: right;
     min-height: 100%;
-    /* max-width: 768px; */
+    max-width: 60vw;
     overflow-y: auto;
     /* border: 2px solid rgb(93, 214, 56); */
     /* max-height: 100vh; */
@@ -129,7 +114,7 @@ div#pic {
 div#contact {
     position: relative;
     background: #5c6b76;
-    height: 25vh;
+    height: 15vw;
     /* color: #001d3d; */
     /* border: 2px solid rgb(229, 229, 68); */
 }
@@ -167,55 +152,39 @@ div#contactbox a  {
         margin-left: auto;
         margin-right: auto;
         color: #001d3d;
-
-        /* position: relative; */
-        /* padding-bottom: 4px; */
-        }
-
+    }
     .comp  i  {
         text-decoration: none; 
         padding-left: 1.5vw;
         padding-top: .5vh;
+        font-size: 2vw;
     }
-
-
+    
     .comp_sup {
         float: left;
         margin-left: auto;
         margin-right: auto;
         color: #001d3d;
-        /* font-size: 1.5vw; */
-            /* padding-top: 4vh; */
-            /* position: relative; */
-            /* margin-left: auto;
-            margin-right: auto; */
         }
 
+    .comp_sup  i  {
+        text-decoration: none; 
+        padding-left: 1.5vw;
+        padding-top: .5vh;
+        font-size: 2vw;
+    }
+    .comp_sup  a  {
+        font-size: 1.5vw;
+    }
     .comp_sup  ul   {
         text-decoration: none; 
         list-style: none;
         margin: unset;
-        font: 90% Roboto, Arial, sans-serif;
         padding-inline-start: 0%;
-        /* padding-left: 1.5vw; */
-        /* padding-top: 1vh; */
-        
+
     }
 
-    .comp_sup  li  {
 
-        /* font: 90% Roboto, Arial, sans-serif; */
-        /* font-size: 1.5vw; */
-        padding-left: 1.8vw;
-        padding-top: 1vh;
-        
-    }
-
-    .comp_sup  i  {
-        text-decoration: none; 
-        /* padding-left: 1.5vw; */
-        /* padding-top: .5vh; */
-    }
 
 
     /* - =          HOVER            = - */
