--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -3,22 +3,26 @@
 
 /* Reset default margin and padding */
 html, body {
+    float:none; 
     margin: 0;
     padding: 0;
-    float:none; 
     margin: 0 auto;
-    /* width: 100%;  */
+
     color: #001d3d;
     font: 90% Roboto, Arial, sans-serif;
     font-weight: 100;
+
+    
     max-height: 100vh;
+    min-height: 255px;
 }
 
 body {
     color: #001d3d;
     font: 90% Roboto, Arial, sans-serif;
-    min-height: 255px;
-    min-width: 378px;
+    
+    min-width: 376px;
+    max-width: 1096px; 
     width: 100vh; 
     width: 100%; 
 }
@@ -35,10 +39,10 @@ div#side {
     background: #4d5d68;
     float: left;
     width: 34%;
-    /* min-width: 40vw; */
-    max-width: 40vw;
+    /* max-width: 40vw; */
     height: 100%;
-
+    
+    /* min-width: 40vw; */
     /* border: 2px solid rgb(32, 54, 200); */
 }
 
@@ -48,8 +52,9 @@ div#main {
     width: 66%;
     float: right;
     min-height: 100%;
-    max-width: 60vw;
     overflow-y: auto;
+
+    /* max-width: 60vw; */
     /* border: 2px solid rgb(93, 214, 56); */
     /* max-height: 100vh; */
 }
@@ -63,10 +68,6 @@ div#stag {
     font-size: 1.2vw;
     float: right;
     padding-right: 8px;
-
-        /* font-size: 12px; */
-        /* background: #eceff4; */
-        /* padding-left: 12px; */
         /* border: 2px solid rgb(200, 32, 169); */
 }
 
@@ -77,14 +78,7 @@ div#mtag {
     font-size: 1.2vw;
     float: left;
     padding-left: 8px;
-    /* padding-top: 2%;
-    padding-bottom: 2%; */
     line-height: 2px;
-
-        /* padding-left: -18px; */
-        /* position: absolute; */
-        /* background: #eceff4; */
-        /* border: 2px solid rgb(200, 32, 169); */
 }
 
 /* - = = = - - = = = - - = = = - - = = = - */
@@ -113,9 +107,11 @@ div#pic {
 
 div#contact {
     position: relative;
-    background: #5c6b76;
-    height: 15vw;
-    /* color: #001d3d; */
+    background: hsl(204, 15%, 35%);
+    /* min-height: 90px; */
+    height: 16vw;
+    
+    color: #000000;
     /* border: 2px solid rgb(229, 229, 68); */
 }
 
@@ -129,16 +125,14 @@ div#contactbox {
     float: left;
     padding-left: 1vw;
     padding-top: 2vh;
-    
-    /* padding-left: 1%; */
+    /* min-height: 30vh; */
     /* height: 15vw; */
     /* border: 2px solid rgb(229, 170, 68); */
 
 }
 div#contactbox a  {
-    text-decoration: none; /* Supprime le soulignement */
-    color: inherit;     /* Utilise la couleur héritée du parent */
-    /* color: #001d3d; */
+    text-decoration: none;
+    color: inherit;     
   }
   
 
@@ -151,7 +145,7 @@ div#contactbox a  {
         float: left;
         margin-left: auto;
         margin-right: auto;
-        color: #001d3d;
+        color: #000;
     }
     .comp  i  {
         text-decoration: none; 
@@ -164,14 +158,14 @@ div#contactbox a  {
         float: left;
         margin-left: auto;
         margin-right: auto;
-        color: #001d3d;
+        color: #000;
         }
 
     .comp_sup  i  {
         text-decoration: none; 
         padding-left: 1.5vw;
         padding-top: .5vh;
-        font-size: 2vw;
+        font-size: 1.8vw;
     }
     .comp_sup  a  {
         font-size: 1.5vw;
@@ -206,35 +200,23 @@ div#contactbox a  {
 div#skill {
     /* position: absolute; */
     position: relative;
-    background: #5c6b76;
+    background: #4d5d68;
     height: 45%;
-    /* height: 40vb; */
-    padding-left: 1vw;
-    padding-bottom: 1vh;;
+    /* height: 50vh; */
+    padding-left: 1.5vw;
+    /* padding-bottom: 1vh; */
     /* border: 3px solid rgb(62, 62, 183); */
 }
 
-div#skill p {
-    color: #001d3d;
-    font: 90% Roboto, Arial, sans-serif;
-    
-    padding-top: 2px;
-    padding-left: 2px;
-    list-style: none;
-    font-size: 1.2vw;
-    /* color: #fff; */
-    /* font-weight: 30; */
-    /* font-size: 15px; */
-    /* font: bold; */
-} 
 
 /* container for slider bar */
 div#skillbox {
     /* position: relative; */
-
-    padding-left: -10px;
-    padding-top: 1%;
-    /* border: 3px solid rgb(213, 17, 17); */
+    background-color: #4d5d68;
+    /* padding-left: -10px; */
+    padding-top: 1vh;
+    /* padding-bottom: 1vh; */
+    /* border: 1px solid rgb(213, 17, 17); */
 }
 div#skillbox li {
     color: #fff;
@@ -244,6 +226,15 @@ div#skillbox li {
     line-height: 2vw;
     padding-top: .2vh;
 }
+div#skillbox p {
+    color: #000;
+    /* font: 90% Roboto, Arial, sans-serif; */
+    padding-top: 0;
+    padding-left: -1vw;
+    list-style: none;
+    font-size: 1vw;
+} 
+
 
 /*      ---   SLIDER DIVS    ---     */
 * {box-sizing: border-box}
@@ -274,29 +265,36 @@ div#skillbox li {
 
 /* - = = = - - = = = - - = = = - - = = = - */
     /* ---        INTERETS          ---  */
-.int {
+div#int {
     position: relative;
-    background: #5c6b76;
-    font: 90% Roboto, Arial, sans-serif;
-    height: 10vh;
+    background: #4d5d68;
+    padding-top: 2vh;
+    /* font: 90% Roboto, Arial, sans-serif; */
+    height: 18%;
 
     /* border: 1px solid rgb(150, 76, 7); */
 }
 div#intbox {
     /* padding-left: 2vw; */
     position: relative;
-    padding-top: 1vh;
+    padding-top: 3vh;
+    padding-bottom: 2vh;
     /* border: 3px solid rgb(29, 9, 9); */
 }
 div#intbox li {
     
     list-style: none;
+    line-height: 2vh;
     font-size: 1.2vw;
     color: #fff;
-    line-height: 1vh;
-    padding-top: .3vh;
+    /* padding-top: 1vh; */
     padding-left: 1.6vw;
     /* padding-left: -10px; */
+}
+div#intbox p {
+    
+    padding-left: .6vw;
+
 }
     
 /*          MAIN  DIVS           */
@@ -308,8 +306,8 @@ div#name {
     position: relative;
     background: #c6ccd4;
     float:none; 
-    margin-left: 1vw; 
-    height: 50px;
+    margin-left: 2vw; 
+    height: 10vh;
     font-size: 4vw;
     /* margin-right: 20%; */
     /* font-size: 36px; */
@@ -321,14 +319,14 @@ div#job {
     position: relative;
     background: #c6ccd4;
     
-    height: auto;
+    height: 8vh;
     /* border: 1px solid rgb(150, 76, 7); */
 }
 
 .jobbox  p {
     font: 70% Cambria, Calibri,sans-serif;
     font-size: 3vw;
-    margin-left: 20vw; 
+    margin-left: 12vw; 
     }
 /* - = = = - - = = = - - = = = - - = = = - */
     /* ---          ABOUT               ---  */
@@ -425,7 +423,7 @@ div#aboutbox p {
     color: white; /* Text color of the tooltip */
     padding: 5px 10px; /* Add some padding for better appearance */
     border-radius: 4px; /* Rounded corners for the tooltip */
-    font-size: 1.1vb; /* Font size of the tooltip */
+    font-size: 2vb; /* Font size of the tooltip */
     white-space: nowrap; /* Prevent line breaks within the tooltip */
     visibility: hidden; /* Hide the tooltip by default */
     opacity: 0; /* Make it completely transparent */
