--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ div#contact {
     position: relative;
     background: hsl(204, 15%, 35%);
     /* min-height: 90px; */
-    height: 16vw;
+    height: 20vw;
     
     color: #000000;
     /* border: 2px solid rgb(229, 229, 68); */
@@ -353,10 +353,13 @@ div#aboutbox p {
 
 }
 
-.obj {
-    position: relative;
+.lang {
+    position: absolute;
+    float: right;
+    padding-top: 1vw;
+    padding-right: 0;
     background: #c6ccd4;
-    height: 225px;
+    height: 25px;
     /* border: 1px solid rgb(150, 76, 7); */
 }
 
